# timely-dataflow

./: .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  README.md  booktests.rs  clippy.toml  index.html  introduction.html  log.md  log_alloc.md  log_api.md  log_hotloop.md  log_mdbook.md  log_panic.md  log_silent.md  log_unsafe.md  print.html  prompt.md  prompt_alloc.md  prompt_api.md  prompt_hotloop.md  prompt_mdbook.md  prompt_panic.md  prompt_silent.md  prompt_unsafe.md  release-plz.toml  searcher-c2a407aa.js  searchindex-00c36cf0.js  searchindex-192e2cad.js  searchindex-27f4c774.js  searchindex-360d129d.js  searchindex-3f977f42.js  searchindex-613521cc.js  searchindex-6e091a1a.js  searchindex-77feb808.js  searchindex-8a694264.js  searchindex-8b624a9b.js  (+9 more)
.github/: dependabot.yml
.github/workflows/: deploy.yml  miri.yml  release-plz.yml  test.yml
benches/: barrier.rs
bytes/: Cargo.toml
bytes/src/: lib.rs
chapter_0/: chapter_0.html  chapter_0_0.html  chapter_0_1.html  chapter_0_2.html  chapter_0_3.html
chapter_1/: chapter_1.html  chapter_1_1.html  chapter_1_2.html  chapter_1_3.html
chapter_2/: chapter_2.html  chapter_2_1.html  chapter_2_2.html  chapter_2_3.html  chapter_2_4.html  chapter_2_5.html
chapter_3/: chapter_3.html  chapter_3_1.html  chapter_3_2.html  chapter_3_3.html  chapter_3_4.html
chapter_4/: chapter_4.html  chapter_4_1.html  chapter_4_2.html  chapter_4_3.html  chapter_4_4.html  chapter_4_5.html
chapter_5/: chapter_5.html  chapter_5_1.html  chapter_5_2.html  chapter_5_3.html  chapter_5_4.html
communication/: Cargo.toml
communication/examples/: comm_hello.rs  hello.rs  lgalloc.rs  spill_stress.rs
communication/src/: buzzer.rs  container.rs  drain.rs  initialize.rs  lib.rs  log_events.rs  logging.rs  message.rs  networking.rs
communication/src/allocator/: binary.rs  counters.rs  generic.rs  mod.rs  process.rs  process_binary.rs  process_binary_neu.rs  thread.rs
communication/src/allocator/zero_copy/: allocator.rs  allocator_process.rs  binary.rs  bytes_exchange.rs  bytes_slab.rs  initialize.rs  mod.rs  push_pull.rs  shared_queue.rs  spill.rs  stream.rs  tcp.rs
container/: Cargo.toml
container/src/: columnar.rs  columnation.rs  flatcontainer.rs  lib.rs  refs.rs
examples/: adstats.rs  barrier.rs  bfs.rs  broadcast.rs  capture_recv.rs  capture_send.rs  distinct.rs  event_driven.rs  example.rs  exchange.rs  flow_controlled.rs  hashjoin.rs  hello.rs  logging-recv.rs  logging-send.rs  loopdemo.rs  main_static.rs  networked.rs  openloop.rs  operator.rs  pagerank.rs  pingpong.rs  queue.rs  rc.rs  reachability.rs  realtime.rs  receiver.rs  threadless.rs  unionfind.rs  unordered_input.rs  wordcount.rs
experiments/: Cargo.toml  README.md
experiments/src/: lib.rs
fabric/: Cargo.toml
kafkaesque/: Cargo.toml
logging/: Cargo.toml
logging/src/: lib.rs
mdbook/: Cargo.toml  build.rs
sort/: Cargo.toml  README.md
sort/benches/: benches.rs
sort/src/: batched_vec.rs  lib.rs  lsb.rs  lsb_swc.rs  msb.rs  msb_swc.rs  stash.rs  swc_buffer.rs
src/: activate.rs  drain.rs  execute.rs  initialize.rs  introduction.md  lib.rs  logging.rs  main.rs  order.rs  time.rs  worker.rs
tests/: barrier.rs  skeptic.rs
timely/: Cargo.toml
timely/examples/: barrier.rs  bfs.rs  capture_recv.rs  capture_send.rs  columnar.rs  distinct.rs  event_driven.rs  event_driven_diamond.rs  event_driven_thread_stat.rs  exchange.rs  flatcontainer.rs  flow_controlled.rs  hashjoin.rs  hello.rs  logging-live.rs  logging-recv.rs  logging-send.rs  logging_replay.rs  loopdemo.rs  openloop.rs  pagerank.rs  pingpong.rs  rc.rs  sequence.rs  simple.rs  spill_cb.rs  spill_compare.rs  threadless.rs  unionfind.rs  unordered_input.rs  wordcount.rs  wordcount_flatcontainer.rs
timely/examples/wasm-bindgen/: Cargo.toml  README.md
timely/examples/wasm-bindgen/src/: lib.rs
timely/src/: execute.rs  lib.rs  logging.rs  order.rs  visualizer.rs  worker.rs
timely/src/dataflow/: mod.rs  scope.rs  stream.rs
timely/src/dataflow/channels/: mod.rs  pact.rs
timely/src/dataflow/channels/pullers/: counter.rs  mod.rs
timely/src/dataflow/channels/pushers/: buffer.rs  counter.rs  eager_exchange.rs  exchange.rs  lazy_exchange.rs  mod.rs  non_retaining_exchange.rs  owned.rs  progress.rs  tee.rs
timely/src/dataflow/operators/: branch.rs  broadcast.rs  capability.rs  concat.rs  count.rs  delay.rs  enterleave.rs  exchange.rs  feedback.rs  filter.rs  filter_map.rs  flow_controlled.rs  input.rs  input_core.rs  inspect.rs  map.rs  mod.rs  ok_err.rs  partition.rs  probe.rs  rc.rs  reclock.rs  result.rs  to_stream.rs  unordered_input.rs  unordered_input_core.rs
timely/src/dataflow/operators/aggregation/: aggregate.rs  state_machine.rs
timely/src/dataflow/operators/capture/: capture.rs  event.rs  extract.rs  mod.rs  replay.rs
timely/src/dataflow/operators/core/: broadcast.rs  concat.rs  delay.rs  enterleave.rs  exchange.rs  feedback.rs  filter.rs  input.rs  inspect.rs  map.rs  mod.rs  ok_err.rs  partition.rs  probe.rs  rc.rs  reclock.rs  to_stream.rs  unordered_input.rs
timely/src/dataflow/operators/core/capture/: capture.rs  event.rs  extract.rs  mod.rs  replay.rs
timely/src/dataflow/operators/generic/: binary.rs  builder_raw.rs  builder_rc.rs  builder_ref.rs  handles.rs  mod.rs  notificator.rs  operator.rs  operator_info.rs  unary.rs
timely/src/dataflow/operators/vec/: branch.rs  broadcast.rs  count.rs  delay.rs  filter.rs  flow_controlled.rs  input.rs  map.rs  mod.rs  partition.rs  queue.rs  result.rs  to_stream.rs  unordered_input.rs
timely/src/dataflow/operators/vec/aggregation/: aggregate.rs  state_machine.rs
timely/src/dataflow/scopes/: child.rs  mod.rs  region.rs
timely/src/progress/: broadcast.rs  change_batch.rs  frontier.rs  fusion.rs  graph_ir.rs  graph_pass.rs  mod.rs  operate.rs  reachability.rs  subgraph.rs  timestamp.rs
timely/src/scheduling/: activate.rs  mod.rs
timely/src/synchronization/: barrier.rs  mod.rs  sequence.rs
timely/tests/: barrier.rs  chain_fusion.rs  gh_523.rs  logging.rs  shape_scaling.rs
visualizer/: index.html
(+277 files in other folders)
