[workspace]
members = [
    "bytes",
    "communication",
    "container",
    "logging",
    "timely",
]

resolver = "2"

[workspace.package]
edition = "2021"

[profile.release]
opt-level = 3
debug = true
rpath = false
# Disable LTO because it causes erratic behavior in Rust 1.53
#lto = true
debug-assertions = false
