[workspace]
members = [
    "bytes",
    "communication",
    "container",
    "logging",
    "mdbook",
    "timely",
]

resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
columnar = "0.11"

[workspace.lints.clippy]
type_complexity = "allow"
option_map_unit_fn = "allow"
wrong_self_convention = "allow"
should_implement_trait = "allow"
module_inception = "allow"

#as_conversions = "warn"
bool_comparison = "warn"
borrow_interior_mutable_const = "warn"
borrowed_box = "warn"
builtin_type_shadow = "warn"
clone_on_ref_ptr = "warn"
crosspointer_transmute = "warn"
dbg_macro = "warn"
deref_addrof = "warn"
disallowed_macros = "warn"
disallowed_methods = "warn"
disallowed_types = "warn"
double_must_use = "warn"
double_parens = "warn"
duplicate_underscore_argument = "warn"
excessive_precision = "warn"
extra_unused_lifetimes = "warn"
from_over_into = "warn"
match_overlapping_arm = "warn"
must_use_unit = "warn"
mut_mutex_lock = "warn"
needless_borrow = "warn"
needless_pass_by_ref_mut = "warn"
needless_question_mark = "warn"
needless_return = "warn"
no_effect = "warn"
panicking_overflow_checks = "warn"
partialeq_ne_impl = "warn"
print_literal = "warn"
redundant_closure = "warn"
redundant_closure_call = "warn"
redundant_field_names = "warn"
redundant_pattern = "warn"
redundant_slicing = "warn"
redundant_static_lifetimes = "warn"
same_item_push = "warn"
shadow_unrelated = "warn"
single_component_path_imports = "warn"
suspicious_assignment_formatting = "warn"
suspicious_else_formatting = "warn"
suspicious_unary_op_formatting = "warn"
todo = "warn"
transmutes_expressible_as_ptr_casts = "warn"
unnecessary_cast = "warn"
unnecessary_lazy_evaluations = "warn"
unnecessary_mut_passed = "warn"
unnecessary_unwrap = "warn"
unused_async = "warn"
useless_asref = "warn"
useless_conversion = "warn"
useless_format = "warn"
wildcard_in_or_patterns = "warn"
write_literal = "warn"
zero_divided_by_zero = "warn"
zero_prefixed_literal = "warn"

[profile.release]
opt-level = 3
debug = true
rpath = false
# Disable LTO because it causes erratic behavior in Rust 1.53
#lto = true
debug-assertions = false
