[package]
name = "timely_bytes"
version = "0.7.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]

description = "Disjoint mutable byte slices from a common allocation"

documentation = "https://frankmcsherry.github.com/timely-dataflow"
homepage = "https://github.com/frankmcsherry/timely-dataflow"
repository = "https://github.com/frankmcsherry/timely-dataflow.git"
keywords = ["timely", "dataflow", "bytes"]
license = "MIT"

[dependencies]
