[package]
name = "timely_bytes"
version = "0.26.1"
authors = ["Frank McSherry <fmcsherry@me.com>"]
edition.workspace = true
rust-version.workspace = true

description = "Disjoint mutable byte slices from a common allocation"

documentation = "https://docs.rs/timely/"
homepage = "https://github.com/TimelyDataflow/timely-dataflow"
repository = "https://github.com/TimelyDataflow/timely-dataflow.git"
keywords = ["timely", "dataflow", "bytes"]
license = "MIT"

[lints]
workspace = true
