[package]
name = "timely_communication"
version = "0.16.2"
authors = ["Frank McSherry <fmcsherry@me.com>"]
description = "Communication layer for timely dataflow"
edition.workspace = true

# These URLs point to more information about the repository

documentation = "https://docs.rs/timely/"
homepage = "https://github.com/TimelyDataflow/timely-dataflow"
repository = "https://github.com/TimelyDataflow/timely-dataflow.git"
keywords = ["timely", "dataflow"]
license = "MIT"

[features]
default = ["getopts"]

[dependencies]
columnar = "0.2"
getopts = { version = "0.2.21", optional = true }
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
timely_bytes = { path = "../bytes", version = "0.12" }
timely_container = { path = "../container", version = "0.14.0" }
timely_logging = { path = "../logging", version = "0.13" }
crossbeam-channel = "0.5"
