[package]
name = "timely_communication"
version = "0.18.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]
description = "Communication layer for timely dataflow"
edition.workspace = true

# These URLs point to more information about the repository

documentation = "https://docs.rs/timely/"
homepage = "https://github.com/TimelyDataflow/timely-dataflow"
repository = "https://github.com/TimelyDataflow/timely-dataflow.git"
keywords = ["timely", "dataflow"]
license = "MIT"

[lints]
workspace = true

[features]
default = ["getopts"]

[dependencies]
columnar = { workspace = true }
getopts = { version = "0.2.21", optional = true }
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
timely_bytes = { path = "../bytes", version = "0.13" }
timely_container = { path = "../container", version = "0.15.0" }
timely_logging = { path = "../logging", version = "0.13" }

# Lgalloc only supports linux and macos, don't depend on any other OS.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dev-dependencies]
lgalloc = "0.4"
