[package]
name = "timely_container"
version = "0.12.0"
edition = "2018"
description = "Container abstractions for Timely"
license = "MIT"

[dependencies]
columnation = { git = "https://github.com/frankmcsherry/columnation" }
flatcontainer = "0.3"
#flatcontainer = { path = "../../flatcontainer" }
serde = { version = "1.0"}
