[package]
name = "timely_container"
version = "0.12.0"
description = "Container abstractions for Timely"
license = "MIT"
edition.workspace = true

[dependencies]
columnation = "0.1"
flatcontainer = "0.5"
serde = { version = "1.0", features = ["derive"] }
columnar = "0.1"
# columnar = { path = "../../columnar" }
# columnar = { git = "https://github.com/frankmcsherry/columnar" }
