[package]
name = "timely_logging"
version = "0.13.3"
authors = ["Frank McSherry <fmcsherry@me.com>"]
description = "Common timely logging infrastructure"
edition.workspace = true

documentation = "https://docs.rs/timely/"
homepage = "https://github.com/TimelyDataflow/timely-dataflow"
repository = "https://github.com/TimelyDataflow/timely-dataflow.git"
keywords = ["timely", "dataflow", "logging"]
license = "MIT"

[lints]
workspace = true

[dependencies]
timely_container = { version = "0.15.0", path = "../container" }
