[package]
name = "timely_sort"
version = "0.1.7"
authors = ["Frank McSherry <fmcsherry@me.com>"]

description = "Sorting infrastructure for timely dataflow"

# These URLs point to more information about the repository
documentation = "https://frankmcsherry.github.com/timely-dataflow"
homepage = "https://github.com/frankmcsherry/timely-dataflow"
repository = "https://github.com/frankmcsherry/timely-dataflow.git"
keywords = ["timely", "dataflow", "radix", "sort"]
license = "MIT"

[dependencies]
rand="*"

[dev-dependencies]
rand="0.3.13"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
