[package]
name = "timely_sort"
version = "0.1.7"
authors = ["Frank McSherry <fmcsherry@me.com>"]
edition = "2018"

description = "Sorting infrastructure for timely dataflow"

# These URLs point to more information about the repository
documentation = "https://frankmcsherry.github.com/timely-dataflow"
homepage = "https://github.com/frankmcsherry/timely-dataflow"
repository = "https://github.com/frankmcsherry/timely-dataflow.git"
keywords = ["timely", "dataflow", "radix", "sort"]
license = "MIT"

[[bench]]
name = "benches"
harness = false

[dependencies]
rand="*"

[dev-dependencies]
bencher = "0.1.5"
