[package]

name = "timely"
version = "0.21.5"
authors = ["Frank McSherry <fmcsherry@me.com>"]
readme = "../README.md"
edition.workspace = true
description = "A low-latency data-parallel dataflow system in Rust"

# These URLs point to more information about the repository
documentation = "https://docs.rs/timely/"
homepage = "https://github.com/TimelyDataflow/timely-dataflow"
repository = "https://github.com/TimelyDataflow/timely-dataflow.git"
keywords = ["timely", "dataflow"]
license = "MIT"

[lints]
workspace = true

[features]
default = ["getopts"]
getopts = ["dep:getopts", "timely_communication/getopts"]

[dependencies]
columnar = { workspace = true }
columnation = "0.1"
getopts = { version = "0.2.21", optional = true }
bincode = { version = "1.0" }
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
timely_bytes = { path = "../bytes", version = "0.21" }
timely_logging = { path = "../logging", version = "0.21" }
timely_communication = { path = "../communication", version = "0.21", default-features = false }
timely_container = { path = "../container", version = "0.21" }
smallvec = { version = "1.13.2", features = ["serde", "const_generics"] }

[dev-dependencies]
bytemuck = "1.18.0"
rand = { version = "0.8", features = ["small_rng"] }
