[package]

name = "timely"
version = "0.26.1"
authors = ["Frank McSherry <fmcsherry@me.com>"]
readme = "../README.md"
edition.workspace = true
description = "A low-latency data-parallel dataflow system in Rust"

# These URLs point to more information about the repository
documentation = "https://docs.rs/timely/"
homepage = "https://github.com/TimelyDataflow/timely-dataflow"
repository = "https://github.com/TimelyDataflow/timely-dataflow.git"
keywords = ["timely", "dataflow"]
license = "MIT"

[lints]
workspace = true

[features]
default = ["getopts"]
getopts = ["dep:getopts", "timely_communication/getopts"]
rand = ["dep:rand"]

[dependencies]
columnar = { workspace = true }
columnation = "0.1"
getopts = { version = "0.2.24", optional = true }
bincode = { version = "1.3" }
byteorder = "1.5"
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
timely_bytes = { path = "../bytes", version = "0.26" }
timely_logging = { path = "../logging", version = "0.26" }
timely_communication = { path = "../communication", version = "0.26", default-features = false }
timely_container = { path = "../container", version = "0.26" }
smallvec = { version = "1.15.1", features = ["serde", "const_generics"] }
rand = { version = "0.8", features = ["small_rng"], optional = true }

[[example]]
name = "bfs"
required-features = ["rand"]

[[example]]
name = "hashjoin"
required-features = ["rand"]

[[example]]
name = "pagerank"
required-features = ["rand"]

[[example]]
name = "unionfind"
required-features = ["rand"]
