[package]

name = "timely"
version = "0.27.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]
readme = "../README.md"
edition.workspace = true
description = "A low-latency data-parallel dataflow system in Rust"

# These URLs point to more information about the repository
documentation = "https://docs.rs/timely/"
homepage = "https://github.com/TimelyDataflow/timely-dataflow"
repository = "https://github.com/TimelyDataflow/timely-dataflow.git"
keywords = ["timely", "dataflow"]
license = "MIT"

[lints]
workspace = true

[features]
default = ["getopts"]
getopts = ["dep:getopts", "timely_communication/getopts"]

[dependencies]
columnar = { workspace = true }
columnation = "0.1"
getopts = { version = "0.2.24", optional = true }
bincode = { version = "1.3" }
byteorder = "1.5"
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
timely_bytes = { path = "../bytes", version = "0.27" }
timely_logging = { path = "../logging", version = "0.27" }
timely_communication = { path = "../communication", version = "0.27", default-features = false }
timely_container = { path = "../container", version = "0.27" }
smallvec = { version = "1.15.1", features = ["serde", "const_generics"] }
